--- a/99bottles/99bottles.html
+++ b/99bottles/99bottles.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <style> body { font-family: Verdana, sans-serif; } </style>
     <body>
         <script>
             var beverage = "rum";
